--- a/src/ui/Header/Header.scss
+++ b/src/ui/Header/Header.scss
@@ -11,7 +11,7 @@
   background-color: $red;
   top: 0;
   width: 100%;
-  position: sticky;
+  position: fixed;
   z-index: 100;
   transition: transform 0.3s ease-in-out;
 }
