--- a/src/ui/Home/Footer.scss
+++ b/src/ui/Home/Footer.scss
@@ -41,13 +41,12 @@
 
   &__form {
     display: flex;
-    gap: toRem(21);
+    gap: toRem(22);
     justify-content: space-between;
     align-items: center;
     padding-top: toRem(50);
 
     &__input {
-      width: toRem(500);
       border-radius: 4px;
       padding-top: 15px;
       padding-bottom: 15px;
@@ -59,6 +58,7 @@
       border-color: transparent;
       outline: none;
       color: $red;
+      flex: 1;
     }
 
     &__input::placeholder {
